--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ main {
 	display: flex;
 	gap: 0.5em;
 	flex-wrap: wrap;
-	flex-basis: 40%;
 }
 	.flex-gallery > * {
 		background-color: hsl(var(--color-h), 40%, 20%);
@@ -118,6 +117,20 @@ main {
 		max-width: 20ch;
 		object-fit: contain;
 	}
+
+.flex-gallery-card {
+	display: flex;
+	gap: 1em;
+	padding-right: 1em;
+	text-decoration: none;
+}
+	.flex-gallery-card > * {
+		flex-grow: 1;
+	}
+	.flex-cgallery-ard > img {
+		flex-grow: 0;
+	}
+
 
 .selline {
 	position: relative;
